6656830: assert((*p)->is_oop(),"expected an oop while scanning weak refs")

Reviewed-by: dcubed, kvn, twisti